...
                    .align(Alignment.CenterStart)
                    .size(20.dp)
                    .clickable { onBack() })
            Text(
                "Forget Password",
                modifier = Modifier
                    .testTag("forgot")
                    .align(Alignment.Center),
                fontSize = 24.sp,
                fontWeight = FontWeight.SemiBold,
                color = Color.White
            )
        }
...
